fix: changed delete endpoint url for removing an aux teacher
