# src/docs/swagger.yaml
@@ -606,16 +606,6 @@ definitions:
       vote_count:
         type: integer
     type: object
-  schemas.RemoveAuxTeacherFromCourseRequest:
-    properties:
-      aux_teacher_id:
-        type: string
-      teacher_id:
-        type: string
-    required:
-    - aux_teacher_id
-    - teacher_id
-    type: object
   schemas.SearchQuestionsResponse:
     properties:
       questions:
@@ -1153,6 +1143,37 @@ paths:
       summary: Update a course
       tags:
       - courses
+  /courses/{id}/aux-teacher/remove:
+    delete:
+      consumes:
+      - application/json
+      description: Remove an aux teacher from a course by ID
+      parameters:
+      - description: Course ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Teacher ID
+        in: query
+        name: teacherId
+        required: true
+        type: string
+      - description: Aux teacher ID
+        in: query
+        name: auxTeacherId
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Course'
+      summary: Remove an aux teacher from a course
+      tags:
+      - courses
   /courses/{id}/enroll:
     post:
       consumes:
@@ -1253,7 +1274,33 @@ paths:
       tags:
       - enrollments
   /courses/{id}/feedback:
-    get:
+    post:
+      consumes:
+      - application/json
+      description: Create course feedback by course ID
+      parameters:
+      - description: Course ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Course feedback
+        in: body
+        name: feedback
+        required: true
+        schema:
+          $ref: '#/definitions/schemas.CreateCourseFeedbackRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.CourseFeedback'
+      summary: Create course feedback
+      tags:
+      - courses
+    put:
       consumes:
       - application/json
       description: Get course feedback by course ID
@@ -1279,32 +1326,6 @@ paths:
               $ref: '#/definitions/model.CourseFeedback'
             type: array
       summary: Get course feedback
-      tags:
-      - courses
-    post:
-      consumes:
-      - application/json
-      description: Create course feedback by course ID
-      parameters:
-      - description: Course ID
-        in: path
-        name: id
-        required: true
-        type: string
-      - description: Course feedback
-        in: body
-        name: feedback
-        required: true
-        schema:
-          $ref: '#/definitions/schemas.CreateCourseFeedbackRequest'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/model.CourseFeedback'
-      summary: Create course feedback
       tags:
       - courses
   /courses/{id}/feedback/summary:
@@ -1359,33 +1380,6 @@ paths:
           schema:
             $ref: '#/definitions/schemas.ErrorResponse'
       summary: Get course members
-      tags:
-      - courses
-  /courses/{id}/remove-aux-teacher:
-    delete:
-      consumes:
-      - application/json
-      description: Remove an aux teacher from a course by ID
-      parameters:
-      - description: Course ID
-        in: path
-        name: id
-        required: true
-        type: string
-      - description: Remove aux teacher from course request
-        in: body
-        name: removeAuxTeacherRequest
-        required: true
-        schema:
-          $ref: '#/definitions/schemas.RemoveAuxTeacherFromCourseRequest'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/model.Course'
-      summary: Remove an aux teacher from a course
       tags:
       - courses
   /courses/{id}/student-feedback:
@@ -1558,7 +1552,7 @@ paths:
       tags:
       - courses
   /feedback/student/{id}:
-    get:
+    put:
       consumes:
       - application/json
       description: Get feedback by student ID
